--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="footer-section ion-padding-horizontal">
   <div class="row">
     <div class="col">
-      <img src="assets/img/logo-white-1.webp" class="img-fluid" alt="logo">
+      <img src="assets/img/logo.png" class="img-fluid" alt="logo">
       <div class="footer-text">
         <p> Work hard and no play? We don't believe in that. Get access to best-selling fiction and non-fiction
           books by your favourite authors, thrilling English and Indian blockbusters. </p>
