--- a/src/app/pages/account/cards/cards.page.html
+++ b/src/app/pages/account/cards/cards.page.html
@@ -11,14 +11,14 @@
       <ion-item class="card-design" *ngFor="let card of cardData">
         <ion-icon name="card" slot="start" color="light"></ion-icon>
         <ion-label class="ion-text-end" color="dark">**** **** **** {{card.cardNo}}</ion-label>
-        <ion-button fill="clear">
+        <ion-button (click)="onDeleteCards()" fill="clear">
           <ion-icon name="trash" color="danger"></ion-icon>
         </ion-button>
         
       </ion-item>
       <ion-item class="add-card-design">
-        <ion-button class="m-auto" fill="clear" size="large">
-          <ion-icon name="add-circle"></ion-icon>
+        <ion-button class="m-auto" routerLink="/add-card" fill="clear" size="large">
+          <ion-icon name="add-circle" ></ion-icon>
         </ion-button>
       </ion-item>
     </ion-list>
