--- a/src/app/pages/checkout/checkout.page.html
+++ b/src/app/pages/checkout/checkout.page.html
@@ -29,21 +29,11 @@
                   </ion-label>  
                   <a>Edit</a>
                 </ion-item>
-
-                <!-- <ion-item lines="none"  *ngFor="let address of addressData">
-                  <ion-radio [value]="selectedAddress" slot="start" value="2"></ion-radio>
-                  <ion-label>{{address.addressData}}
-                    <b>Curabitur</b> - +91 xxxxx xxxxx
-                    <p>4, Raj Laxmi Bldg, Shree Nagar, Wagle Est, Thane(w), Mumbai, Maharashtra - 400604</p>
-                  </ion-label>
-                  <a>Edit</a>
-                </ion-item> -->
-                  
                 <ion-item>
                   <ion-radio slot="start" value="3"></ion-radio>
                   <ion-label>
-                    <ion-button routerLink="/address" class="m-auto" fill="clear" color="dark" size="small">
-                    <ion-icon name="add-circle"></ion-icon> Add New Address
+                    <ion-button routerLink="/view-address" class="m-auto" fill="clear" color="dark" size="small">
+                    View All Address
                   </ion-button>
                   </ion-label>
                 </ion-item>
@@ -74,7 +64,7 @@
                 <ion-item>
                   <ion-radio slot="start" value="2"></ion-radio>
                   <ion-label>
-                    <ion-button routerLink="/add-card" class="m-auto" fill="clear" color="dark" size="small">
+                    <ion-button routerLink="/cards" class="m-auto" fill="clear" color="dark" size="small">
                     <ion-icon name="add-circle"></ion-icon> Add New Card
                   </ion-button>
                   </ion-label>
