--- a/src/app/pages/order/buy-again/buy-again.component.html
+++ b/src/app/pages/order/buy-again/buy-again.component.html
@@ -121,9 +121,8 @@
 
 
 
-<ion-content style="width: 1150px;">
-  <ion-card-content style="margin-left: 17%;
-  ">
+<ion-content >
+  <ion-card-content>
     <ion-row class="suggestions-section p-3" >
       <ion-col size="12">
         <ion-text class="suggestions-section-title" color="primary">
