--- a/src/app/pages/order/buy-again/products-card/products-card.component.html
+++ b/src/app/pages/order/buy-again/products-card/products-card.component.html
@@ -29,6 +29,6 @@
   <span  style="font-size:x-large;color: green;">&#8377;</span><b style="font-size: x-large;color: green;">{{data.cost}}</b><span style="font-size: large;color: green">.00</span>
   <h6><b>Deal</b> MRP <s class="expectedMoney">{{data.expectedMoney}}.00</s></h6>
  </div>
- <ion-button color="warning">Add to Card</ion-button>
+ <ion-button size="small" color="warning">Add to Card</ion-button>
 </a>
 
