--- a/src/app/pages/order/order.component.html
+++ b/src/app/pages/order/order.component.html
@@ -15,14 +15,14 @@
     </div>
   </div>
 
-  <div class="a-row a-spacing-medium custom-view-options">
-    <ul style="cursor: pointer;" class="a-unordered-list a-nostyle a-horizontal" role="tablist">
-        <li role="tab"><span class="a-list-item"></span></li>
-        <li class="selected" role="tab"><span class="a-list-item">
+  <div>
+    <ul style="cursor: pointer;" class="list">
+        <li><span class=""></span></li>
+        <li><span>
         <span class="item"> Orders</span></span></li>
-        <li role="tab"><span class="a-list-item" routerLink="/buy-again"> Buy Again</span></li>
-        <li role="tab"><span class="a-list-item">Not Yet Shipped</span></li>
-        <li role="tab"><span class="a-list-item" routerLink="/cancelled-orders">Cancelled Orders</span></li>
+        <li><span class="a-list-item" routerLink="/buy-again"> Buy Again</span></li>
+        <li ><span class="">Not Yet Shipped</span></li>
+        <li ><span class="" routerLink="/cancelled-orders">Cancelled Orders</span></li>
     </ul>
   </div>
   
