--- a/src/app/layout/topbar/topbar.component.html
+++ b/src/app/layout/topbar/topbar.component.html
@@ -23,11 +23,9 @@
   <ion-row>
     <ion-col size="7" class="my-auto">
       <div class="d-flex justify-content-right">
-<!--Logo
-        <img class="ion-padding-horizontal my-auto" src=""  alt=" "height="50"width="100"routerLink="/"
+        <img class="ion-padding-horizontal my-auto" src="assets/img/logo.png" alt=" "height="50"width="100"routerLink="/"
          />
--->
-        <div class="d-flex delivery-location my-auto pt-1 pe-2">
+         <div class="d-flex delivery-location my-auto pt-1 pe-2">
               <ion-button fill="clear" color="dark">   <ion-icon name="location"></ion-icon>Location</ion-button>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <div>
@@ -132,7 +130,7 @@
     <ion-segment-button value="Recommended">
       Recommended
     </ion-segment-button>
-    <ion-segment-button routerLink="/order" value="Recommended">
+    <ion-segment-button  routerLink="/order" value="Orders">
       Orders
     </ion-segment-button>
   </ion-segment>
