--- a/src/app/pages/book-details/book-details.page.html
+++ b/src/app/pages/book-details/book-details.page.html
@@ -464,7 +464,7 @@ img {
     </ion-row>
   </ion-card-content>
   
-<!-- 
+
   <ion-row class="p-3" *ngIf="!suggestions">
     <ion-col class="mdc-details" size="12">
       <h4 class="m-0">
@@ -475,7 +475,7 @@ img {
       load of skeletonData">
       <ion-skeleton-text animated style="width: 100%; height: 225px"></ion-skeleton-text>
     </ion-col>
-  </ion-row> -->
+  </ion-row> 
 </ion-content>
 
 
