--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -37,7 +37,7 @@
     </ion-col>
 
     <!-- Submit Button -->
-    <ion-col class="ion-padding-top" size="12" routerLink="/">
+    <ion-col class="ion-padding-top" size="12">
       <ion-button color="primary mx-auto" type="submit" expand="block" [disabled]="isSubmitted">Login
         <ion-spinner name="bubbles" *ngIf="isSubmitted"></ion-spinner>
       </ion-button>
