--- a/src/app/pages/checkout/checkout.page.html
+++ b/src/app/pages/checkout/checkout.page.html
@@ -27,7 +27,7 @@
                     <p> {{address.address1}}</p><span><p>{{address.address2}}</p></span>
                     <b>{{address.addressId}}</b> -{{address.addressType}} {{address.area}} {{address.country}}{{address.zipCode}}
                   </ion-label>  
-                  <a>Edit</a>
+                  <!-- <a>Edit</a>   -->
                 </ion-item>
                 <ion-item>
                   <ion-radio slot="start" value="3"></ion-radio>
@@ -96,7 +96,7 @@
                 </ion-col>
                 <ion-col size="2">
                   <ion-item>
-                    <ion-label position="stacked">CSV</ion-label>
+                    <ion-label position="stacked">CVV</ion-label>
                     <ion-input placeholder="xxx"></ion-input>
                   </ion-item>
                 </ion-col>
