--- a/src/app/pages/account/cards/cards.page.html
+++ b/src/app/pages/account/cards/cards.page.html
@@ -11,7 +11,7 @@
       <ion-item class="card-design" *ngFor="let card of cardData">
         <ion-icon name="card" slot="start" color="light"></ion-icon>
         <ion-label class="ion-text-end" color="dark">**** **** **** {{card.cardNo}}</ion-label>
-        <ion-button (click)="onDeleteCards()" fill="clear">
+        <ion-button (click)="onDelete()" fill="clear">
           <ion-icon name="trash" color="danger"></ion-icon>
         </ion-button>
         
