--- a/src/app/layout/topbar/topbar.component.html
+++ b/src/app/layout/topbar/topbar.component.html
@@ -132,5 +132,8 @@
     <ion-segment-button  routerLink="/order" value="Orders">
       Orders
     </ion-segment-button>
+    <ion-segment-button  routerLink="/author-details" value="Author">
+      author
+    </ion-segment-button>
   </ion-segment>
 </ion-toolbar>
