--- a/src/app/pages/order/product-cart/product-cart.component.scss
+++ b/src/app/pages/order/product-cart/product-cart.component.scss
@@ -2,7 +2,7 @@
     position: relative;
     display: flex;
     gap: 10%;
-    background-color:rgb(169, 169, 169);
+    background-color: #b3b5b7;
     width: 65%;
     color: white;
     left: 8%;
@@ -11,8 +11,7 @@
 }
 .second{
     position: relative;
-
-    background-color:whitesmoke;
+    background-color: #ECEFF1;
     padding: 8%;
     width: 65%;
     left: 8%;
