--- a/src/app/pages/order/cancelled-orders/cart/cart.component.scss
+++ b/src/app/pages/order/cancelled-orders/cart/cart.component.scss
@@ -2,8 +2,8 @@
     position: relative;
     display: flex;
     gap: 10%;
-    background-color:rgb(169, 169, 169);
-    width: 65%;
+    background-color: #b3b5b7;
+     width: 65%;
     color: white;
     left: 8%;
     padding-inline: 30px;
@@ -11,8 +11,7 @@
 }
 .second{
     position: relative;
-
-    background-color:whitesmoke;
+    background-color: #ECEFF1;
     padding: 8%;
     width: 65%;
     left: 8%;
