--- a/src/app/pages/author-details/books/books.component.html
+++ b/src/app/pages/author-details/books/books.component.html
@@ -8,7 +8,7 @@
         </ion-col>
         <ion-col>
             <h6> {{data.bookname}} <small>{{data.bookYear}}</small></h6>
-            by <a><ion-label>{{data.authorName}} (Author)</ion-label></a>
+            by <a><ion-label>{{data.authorName}}(Author)</ion-label></a>
             <div class="d-flex">
               <ion-icon color="warning" name="star"></ion-icon>
               <ion-icon color="warning" name="star"></ion-icon>
@@ -70,8 +70,8 @@
                   </ng-template>
           </ion-popover>
         </div>
-        <span  style="font-size:large;">&#8377;</span><b style="font-size: x-large;">{{data.cost}}</b><span style="font-size: large;">.00</span>
-        <h6><b>Deal</b> MRP <s class="expectedMoney">{{data.expectedMoney}}.00</s></h6>
+        <span  style="font-size:large;color: green;">&#8377;</span><b style="font-size: x-large;color: green;">{{data.cost}}</b><span style="font-size: large;color: green;">.00</span>
+        <h6><b>Deal</b> MRP <s style="color: red;" class="expectedMoney">{{data.expectedMoney}}.00</s></h6>
 
 
 
@@ -82,7 +82,7 @@
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error, esse nostrum pariatur fuga incidunt quo, aliquid laboriosam velit eligendi repellat ducimus quisquam voluptas assumenda ut non iure hic cupiditate iusto!
           Eos sunt aspernatur vel, eum at pariatur a aliquam provident sint veritatis sed odit impedit molestias quae fugit ad minima cum repudiandae nobis facilis soluta qui sequi voluptates expedita. Repellat!
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis veritatis, voluptatem deserunt facere placeat modi ducimus temporibus, quae omnis, maxime explicabo sit adipisci ratione voluptas nemo. Expedita a quae enim.
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero cupiditate itaque dolorem eius illum rem beatae recusandae architecto ullam accusantium expedita, voluptate aliquid magnam laboriosam qui nisi earum nobis quisquam.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero cupiditate itaque dolorem eius illum rem beatae recusandae architecto ullam accusantium expedita, voluptate aliquid magnam laboriosam qui nisi earum nobis quisquam. {{data.description}}
         </div>
         <a class="read"  (click)="showText()">
           {{ isReadMore ? 'Read More': 'Read Less' }}
